Changes for Crypt::PBKDF2

{{$NEXT}}

Version 0.131750: 2013-06-24
  * Fix decoding 'crypt'-style hashes with options (CPAN RT#84130)

Version 0.121930: 2012-07-10
  * Correct a typo that breaks deserialization of hashes with algorithm
    options.

Version 0.112020: 2011-07-21
  * SEMI-INCOMPATIBLE CHANGE: Add a new, LDAP-like, output format for
    'generate'. This format is now the default output format. If you want
    to generate the same output as version 0.110461, or that can be read by
    previous versions, see the documentation for the "encoding" attribute.

Version 0.110461: 2011-02-15
  * Fix bug related to instantiation of "hasher".

Version 0.110460: 2011-02-14
  * Miscellaneous documentation improvements.
  * Optional arguments to "generate" and "validate" have been removed. The
    mandatory arguments remain the same. If you want to override options,
    clone the object instead.
  * MooseX::MethodSignatures replaced with Method::Signatures::Simple, which
    should improve speed noticeably.

Version 0.101170: 2010-04-26
  * Updated SEE ALSO section.
  * Repository in META.
  * Added Changes file.

Version 0.101160: 2010-04-26
  * Initial release to CPAN.
  * HMACSHA1, HMACSHA2, and DigestHMAC hashers included.