@@ -8,6 +8,7 @@ use Moose::Util::TypeConstraints;
 use namespace::autoclean;
 use MIME::Base64 ();
 use Carp qw(croak);
+use Module::Runtime;
 use Try::Tiny;
 
 method BUILD {
@@ -79,8 +80,7 @@ method _build_hasher {
   }
   my $hash_args = $self->hash_args;
 
-  Class::MOP::load_class($class);
-  return $class->new( %$hash_args );
+  return Module::Runtime::use_module($class)->new( %$hash_args );
 }
 
 =attr iterations
@@ -419,12 +419,12 @@ an algorithm string as produced by C<encode_string> / C<generate>.
 =cut
 
 method hasher_from_algorithm ($algorithm, $args) {
+  my $class = Module::Runtime::use_module("Crypt::PBKDF2::Hash::$algorithm");
+
   if (defined $args) {
-    Class::MOP::load_class( "Crypt::PBKDF2::Hash::$algorithm" );
-    return "Crypt::PBKDF2::Hash::$algorithm"->from_algo_string($args);
+    return $class->from_algo_string($args);
   } else {
-    Class::MOP::load_class( "Crypt::PBKDF2::Hash::$algorithm" );
-    return "Crypt::PBKDF2::Hash::$algorithm"->new;
+    return $class->new;
   }
 }
 
